增加对内存溢出的处理